Перевод с CMake на MakePy
В один прекрасный момент мне надоело возиться с CMake. Надоело его уламывать, чтобы он сделал то, что я хочу, в соответствии с моими идеалами. Про обычный Make я вообще молчу: я констатировал, что на нём невозможно сделать мою любимую "кроссплатформенную кросскомпиляцию". Другие, менее популярные системы сборки также не соответствуют моим представлениям об идеальном мире (даже система SCons, в которой сценарии сборки пишутся на знакомом и 100% Тьюринг-полноценном языке Python, что, несомненно, даёт наибольшее совпадение с моим идеалом).
В общем, я решил совершить революцию в сфере программистики и написал свою собственную улучшенную, продвинутую, инновационную систему сборки MakePy. Параллельно с написанием этой системы я переводил на неё каркас Модулярис Ядро для тестирования её работоспособности.
И вот я перевёл каркас Модулярис Ядро на систему сборки MakePy. Это стоило того! Инструкция по сборке, упаковке и тестированию существенно упростилась и сократилась. Сам сценарий сборки стал немного лучше выглядеть. А самое главное, команды стали очень удобными и красивыми. Вводишь в терминал всего одну строчку - и всё, сценарий сборки сделал всё, что тебе нужно! При использовании CMake приходилось вводить до 4 команд. Можно даже пакеты по-отдельности собирать! Класс!
Убедитесь в этом сами! Ничего особенного устанавливать не надо (на Windows надо Python устанавливать). Просто запускаете сценарий, и сборка из исходного кода происходит просто, как никогда!
Также пользуйтесь MakePy в любых своих проектах.

--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Maintainer: Серый MLGamer <Seriy-MLGamer@yandex.ru>
 Section: libs
 Priority: optional
 Standards-Version: 0.0.0
-Build-Depends: debhelper-compat (= 13), cmake, gcc
-Vcs-Git: https://github.com/Seriy-MLGamer/Modularis_Core.git
-Vcs-Browser: https://github.com/Seriy-MLGamer/Modularis_Core
-#Description-ru: Каркас модульного синтеза звука Модулярис Ядро
+Build-Depends: debhelper-compat (= 13), python3:any
+Homepage: https://gitverse.ru/Seriy_MLGamer/Modularis_Core
+Vcs-Git: https://gitverse.ru/Seriy_MLGamer/Modularis_Core.git
+Vcs-Browser: https://gitverse.ru/Seriy_MLGamer/Modularis_Core
 Description: Modularis Core modular sound synthesis framework
- This is a free (as in freedom) modular synthesis framework for creation of free digital audio workstations (DAW) and other free programs. Modularis free modular DAW is based on it. Framework is fully crossplatform between mobile and desktop devices.
+ This is a free (as in freedom) modular synthesis framework for creation of free digital audio workstations (DAW) and other free programs. Modularis free modular DAW is based on it. Framework is fully crossplatform between mobile and desktop devices, supports various programming languages.
  .
  Framework essence
    * Freedom
@@ -30,12 +30,26 @@ Description: Modularis Core modular sound synthesis framework
 
 Package: libmodularis0
 Architecture: any
-Depends: libstdc++6
+Depends: libc6
 Description: ${source:Synopsis}
+ ${source:Extended-Description}
+ .
+ This package provides runtime shared library of the framework.
 
 Package: libmodularis-dev
-Architecture: all
+Architecture: any
 Section: libdevel
-Depends: libmodularis0
-#Description-ru: ${source:Synopsis} - файлы разработки
+Depends: libmodularis0 (= ${binary:Version})
 Description: ${source:Synopsis} - development files
+ ${source:Extended-Description}
+ .
+ This package provides files for software development on the framework.
+
+Package: libmodularis-cpp-dev
+Architecture: any
+Section: libdevel
+Depends: libmodularis0 (= ${binary:Version}), libmodularis-dev (= ${binary:Version})
+Description: Modularis Core C++ - development files for C++
+ ${source:Extended-Description}
+ .
+ This package provides a C++ language binding to Modularis Core library written in C for software development in C++ language.
